--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body{
     width: 100px;
     height: 32px;
     border-radius: 5px;
+    margin-top: 20px;
     margin-left: 10px;
     margin-bottom: 20px;
 }
@@ -140,4 +141,5 @@ footer{
     flex-direction: row;
     gap: 40px;
     margin-top: 30px;
+    font-size: 30px;
 }
