--- a/style.css
+++ b/style.css
@@ -111,6 +111,21 @@ body{
     margin-left: 10px;
     margin-bottom: 20px;
 }
+.view-btn{
+   
+    padding: 16px 25px;
+    background-color: #DD0000;
+    border-radius: 5px;
+    font-size: 20px;
+    color: white;
+    margin-top: 30px;
+   
+}
+.view{
+    display: flex;
+    justify-content: center;
+    visibility: hidden;
+}
 .fa-comment-sms{
     margin-left: 20px;
 }
@@ -235,4 +250,79 @@ footer{
     text-align: center;
     margin-top: 30px;
 }
+}
+
+
+/* -------teblet devices ---------- */
+
+@media only screen and (min-width: 688px) and (max-width: 992px){
+
+
+
+    .top-banner{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 734px;
+        height: 398px;
+        margin: 50px;
+        margin-bottom: 10px;
+    }
+    .left{
+        width: 316px;
+        height: 276px;
+        margin-top: 58px;
+    }
+    .big-title{
+        font-size: 40px;
+    }
+    .right img{
+        width: 323px;
+        height: 340px;
+        margin-top: 58px;
+    }
+    .title-discribe{
+        font-size: 14px;
+        width: 316px;
+        height: 48px;
+    }
+    .center{
+        display: flex;
+        flex-direction: column;
+    }
+    .center-left{
+        display: flex;
+        flex-direction: row;
+        background-color: white;
+        width: 700px;
+        margin: 50px;
+        margin-top: 20px;
+        height: 64px;
+    }
+    .center-right{
+        margin-top: 30px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 24px;
+        column-gap: 24px;
+        margin-left: auto;
+    }
+    .blog-9{
+        display: none;
+    }
+    .view{
+        visibility: visible;
+        margin-top: 20px;
+    } 
+    footer{
+        width: 100%;
+        height: 345px;
+        background-color: black;
+    }
+    .footer-items{
+        flex-wrap: wrap;
+    }
+
     
+    
+}
