--- a/style2.css
+++ b/style2.css
@@ -158,5 +158,179 @@ footer{
     margin-top: 30px;
     font-size: 30px;
 }
+/* for mobili devices-------- */
+@media only screen and (max-width: 688px) {
+    .body{
+        margin: 20px;
+    }
+    .big-title{
+        width: 228px;
+        height: 66px;
+        font-size: 22px;
+        margin-bottom: 8px;
+        margin-top: 28px;
+        
+    }
+    .top-banner{
+        display: flex;
+        flex-direction: column;
+        width: 334px;
+        height: 472px;
+        margin-left: 30px;
+}
+.left{
+    width: 258px;
+    height: 178px;
+    margin-bottom: 21px;
+    margin-left: 20px;
+}
+.right img{
+    margin-top: 21px;
+    width: 233px;
+    height: 245px;
+}
+.title-discribe{
+    font-size: 14px;
+    width: 258px;
+    height: 48px;
+}
+.btn1{
+    padding: 8px 12px;
+    background-color: #DD0000;
+    border-radius: 5px;
+    font-size: 20px;
+    color: white;
+    margin-bottom: 21px;
+   
+}
+.center{
+    display: flex;
+    flex-direction: column;
+}
+.center-left{
+    background-color: white;
+    margin-left: 30px;
+}
+.center-right{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: 20px;
+}
+.all-blogs{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
 
+.blog{
+    width: 100%;
+    height: 388px;
+    margin-left: 30px;
+}
+.footer{
+    width: 100%;
+    height: 412px;
+}
+.footer-items{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    width: 347px;
+    height: 300px;
+    margin-left: 250px;
+    margin-top: -20px;
+}
+.footer-icons{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 10px;
+    font-size: 10px;
+}
+.big{
+    text-align: center;
+    margin-top: 30px;
+}
+}
+
+
+/* -------teblet devices ---------- */
+
+@media only screen and (min-width: 688px) and (max-width: 992px){
+
+
+
+    .top-banner{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 734px;
+        height: 398px;
+        margin: 50px;
+        margin-bottom: 10px;
+    }
+    .left{
+        width: 316px;
+        height: 276px;
+        margin-top: 58px;
+    }
+    .all-blogs{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .big-title{
+        font-size: 40px;
+    }
+    .right img{
+        width: 323px;
+        height: 340px;
+        margin-top: 58px;
+    }
+    .title-discribe{
+        font-size: 14px;
+        width: 316px;
+        height: 48px;
+    }
+    .center{
+        display: flex;
+        flex-direction: column;
+    }
+    .center-left{
+        display: flex;
+        flex-direction: row;
+        background-color: white;
+        width: 700px;
+        margin: 50px;
+        margin-top: 20px;
+        height: 64px;
+    }
+    .center-right{
+        margin-top: 30px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 24px;
+        column-gap: 24px;
+        margin-left: auto;
+    }
+    .view{
+        visibility: visible;
+    }
+    .blog-9{
+        display: none;
+    }
+    .view{
+        visibility: visible;
+        margin-top: 20px;
+    } 
+    footer{
+        width: 100%;
+        height: 345px;
+        background-color: black;
+    }
+    .footer-items{
+        flex-wrap: wrap;
+    }
+
+    
+    
+}
 
