--- a/style2.css
+++ b/style2.css
@@ -9,23 +9,13 @@ body{
 }
 /* top banner style start from here -------- */
 
-/* animation ------ */
 
-@keyframes sliding {
-    from{
-        color: white ;
-    }
-    to{
-        color: rgba(0, 128, 0, 0.816);
-    }
-}
 
 
 .big-title{
     font-size: 70px;
     margin-bottom: 20px;
-    animation: sliding  1s ease-in-out 0.5s infinite alternate;
-    animation-play-state: running;
+    
 }
 .title-discribe{
     font-size: 16px;
@@ -56,7 +46,16 @@ body{
     width: 581px;
     height: 613px;
 }
+/* animation ------ */
 
+@keyframes sliding {
+    from{
+        background-color: red ;
+    }
+    to{
+        background-color: rgba(0, 128, 0, 0.816);
+    }
+}
 
 
 
@@ -68,8 +67,8 @@ body{
     font-size: 20px;
     color: white;
     margin-top: 30px;
-    /* animation: sliding  0.7s ease-in-out 0.5s infinite alternate; */
-    /* animation-play-state: running; */
+    animation: sliding  0.3s ease-in-out 0.5s infinite alternate;
+    animation-play-state: running;
    
 }
 .fa-greater-than{
