--- a/style.css
+++ b/style.css
@@ -224,6 +224,18 @@ footer{
     height: 40px;
     margin-bottom: 25px;
 }
+
+/* animation ------ */
+
+@keyframes sliding {
+    from{
+        background-color: red ;
+    }
+    to{
+        background-color: rgba(0, 128, 0, 0.816);
+    }
+}
+
 .btn1{
     padding: 8px 12px;
     background-color: #DD0000;
@@ -231,6 +243,8 @@ footer{
     font-size: 20px;
     color: white;
     margin-bottom: 10px;
+    animation: sliding  0.3s ease-in-out 0.5s infinite alternate;
+    animation-play-state: running;
    
 }
 .center{
@@ -287,7 +301,28 @@ footer{
 @media only screen and (min-width: 688px) and (max-width: 992px){
 
 
+/* animation ------ */
 
+@keyframes sliding {
+    from{
+        background-color: red ;
+    }
+    to{
+        background-color: rgba(0, 128, 0, 0.816);
+    }
+}
+
+.btn1{
+    padding: 8px 12px;
+    background-color: #DD0000;
+    border-radius: 5px;
+    font-size: 20px;
+    color: white;
+    margin-bottom: 10px;
+    animation: sliding  0.3s ease-in-out 0.5s infinite alternate;
+    animation-play-state: running;
+   
+}
     .top-banner{
         display: flex;
         justify-content: center;
@@ -309,6 +344,7 @@ footer{
         width: 323px;
         height: 340px;
         margin-top: 58px;
+        animation: none;
     }
     .title-discribe{
         font-size: 14px;
