--- a/style2.css
+++ b/style2.css
@@ -55,9 +55,7 @@ body{
     
 }
 /* center section's style start form here -------- */
-.center{
-    display: flex;
-}
+
 .center-left{
     display: flex;
     flex-direction: column;
@@ -70,22 +68,7 @@ body{
     margin-right: 24px;
     margin-top: 130px;
     border-radius: 20px;
-}
-.center-right{
-    margin-top: 130px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 24px;
-    column-gap: 24px;
-}
-.blog{
-    border: 1px solid white;
-}
-.blog img{
-    width: 312px;
-    height: 175px;
-}
-.simple-btn{
+}.simple-btn{
     width: 252px;
     height: 64px;
     font-size: 20px;
@@ -103,18 +86,49 @@ body{
     color: white;
     margin: 10px;
 }
-.t-btn{
-    width: 100px;
-    height: 32px;
-    border-radius: 5px;
-    margin-top: 20px;
-    margin-left: 10px;
-    margin-bottom: 20px;
+/* center right's style start from here ------- */
+.center{
+    display: flex;
 }
-.fa-comment-sms{
-    margin-left: 20px;
+.all-blogs{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 24px;
+    column-gap: 24px;
+    margin-top: 130px;
+    margin-right: 50px;
 }
 
+.blog-1{
+    width: 280px;
+    height: 160px;
+    border: 1px solid rgba(128, 128, 128, 0.277);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 20px;
+}
+
+.cr-blog{
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    width: 252px;
+    height: 57px;
+    /* border: 1px solid black; */
+
+}
+.cr-text{
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    width: 240px;
+    height: 60px;
+    margin-top: 20px;
+    align-items: center;
+}
 /* footer styles start from here -------- */
 footer{
     margin-top: 130px;
@@ -146,93 +160,3 @@ footer{
 }
 
 
-/* -----------media quary -------- */
-
-/* for mobili devices-------- */
-@media only screen and (max-width: 688px) {
-    .body{
-        margin: 20px;
-    }
-    .big-title{
-        width: 228px;
-        height: 66px;
-        font-size: 22px;
-        margin-bottom: 8px;
-        margin-top: 28px;
-        /* margin-bottom: 20px; */
-    }
-    .top-banner{
-        display: flex;
-        flex-direction: column;
-        width: 334px;
-        height: 472px;
-        margin-left: 30px;
-}
-.left{
-    width: 258px;
-    height: 178px;
-    margin-bottom: 21px;
-    margin-left: 20px;
-}
-.right img{
-    margin-top: 21px;
-    width: 233px;
-    height: 245px;
-}
-.title-discribe{
-    font-size: 14px;
-    width: 258px;
-    height: 48px;
-}
-.btn1{
-    padding: 8px 12px;
-    background-color: #DD0000;
-    border-radius: 5px;
-    font-size: 20px;
-    color: white;
-    margin-bottom: 21px;
-   
-}
-.center{
-    display: flex;
-    flex-direction: column;
-}
-.center-left{
-    background-color: white;
-    margin-left: 30px;
-}
-.center-right{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    column-gap: 20px;
-}
-.blog{
-    width: 100%;
-    height: 388px;
-    margin-left: 30px;
-}
-.footer{
-    width: 100%;
-    height: 412px;
-}
-.footer-items{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    width: 347px;
-    height: 300px;
-    margin-left: 250px;
-    margin-top: -20px;
-}
-.footer-icons{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-bottom: 10px;
-    font-size: 10px;
-}
-.big{
-    text-align: center;
-    margin-top: 30px;
-}
-    
